themes/climatecolab-theme/src/main/webapp/css/style/pages/_proposals.scss
/* ... */
.proposal-head {
  display: block;
}

.proposal-image {
  float: left;
  width: 52px;
  height: 52px;
  margin-right: 15px;
}

.proposal-title {
  float: left;
  width: 910px;
  color: black;
  overflow: hidden;
}

.prop-description {
  font-size: 18px;
}

.prop-description a {
  font-weight: 700;
}

.proposal-head h1 {
  font-size: 29px;
}

/* proposal TABS */
.prop-tabs {
  margin-top: 8px;
}

.prop-tabs ul {
  height: 37px;
}

.prop-tabs li {
  float: left;
  list-style: none;
  height: 37px;
  margin-right: 6px;
}

.prop-tabs li a {
  height: 24px;
  padding: 13px 12px 0;
  display: inline-block;
  font-size: 13px;
  color: white;
  background: $primary-color;
  text-transform: uppercase;
  font-weight: 700;
  @include border-top-left-radius(5px);
  @include border-top-right-radius(5px);
  @include box-sizing(content-box);
}

.prop-tabs li a:hover {
  height: 24px;
  padding: 12px 11px 1px;
  background: $primary-darkest;
  border-top: 1px solid $medium-grey;
  border-left: 1px solid $medium-grey;
  border-right: 1px solid $medium-grey;
}

.prop-tabs li.c a {
  height: 25px;
  padding: 12px 11px 0;
  color: $primary-color;
  background: white;
  border-top: 1px solid $medium-grey;
  border-left: 1px solid $medium-grey;
  border-right: 1px solid $medium-grey;
}

.prop-tabs li a div {
  display: inline;
  text-align: center;
  font: 12px Arial, Helvetica, sans-serif;
  color: white;
  background: $primary-darkest;
  padding: 0 5px;
  margin-left: 5px;
  @include border-radius(8px);
}

.discussion-button-badge {
  position: absolute;
  right: -7px;
  top: -6px;
  display: inline;
  text-align: center;
  font: 12px Arial, Helvetica, sans-serif;
  color: white;
  background: $primary-darkest;
  padding: 0 5px;
  margin-left: 5px;
  @include border-radius(8px);
}

.button-wrapper {
  position: relative;
  display: inline-block
}

.button-wrapper .detailbutton {
  overflow: auto;
}

/* edit proposal block */
.edit-prop-wrap {
  border-bottom: 1px dashed #666;
  padding: 31px 0 13px;
}

.edit-prop {
  font-size: 13px;
}

.edit-prop a {
  font-weight: 700;
}

.edit-prop-butts {
  float: left;
  margin-right: 5px;
}

.edit-prop-butts a, .edit-prop-butts span {
  height: 20px;
  padding: 3px 10px 0;
  margin-right: 5px;
  display: inline-block;
  background: $primary-darkest;
  font-size: 14px;
  color: white;
  @include border-radius(3px);
}

.edit-prop-butts span {
  background: $light-grey;
  font-weight: 700;
}

.lastedited {
  float: left;
  height: 19px;
  font-size: 13px;
}

/* proposal columns */
.prop-left {
  float: left;
  width: 631px;
  margin-right: 23px;
  line-height: 24px;
}

.prop-right {
  float: left;
  width: 330px;
}

.prop-left h2 {
  font-size: 27px;
  color: $secondary-color;
  margin: 10px 0 16px;
  text-align: justify;
}

.prop-left h3 {
  font-size: 22px;
  margin-bottom: 13px;
  color: $darkest-grey;
}

.prop-left p {
  color: $dark-grey;
}

.prop-left p.intro {
  font-size: 19px;
  line-height: 27px;
}

.div1 {
  background: $lightest-grey;
  height: 6px;
  margin: 30px 0 30px;
}

.div2 {
  background: $light-grey;
  height: 1px;
  margin: 38px 0 30px;
}

.div3 {
  border-top: 1px dotted $medium-grey;
  height: 1px;
}

/*  the Table-like rows of proposals */
.propbox {
  clear: both;
  height: 78px;
  padding: 0 0 0 14px;
  border-bottom: 1px solid $lightest-grey;
}

.propbox.featured {
  background: $lightest-grey;
  border-bottom: 1px solid $light-grey;
}

.propbox.top {
  margin-top: -4px;
}

.propbox .row1 {
  height: 38px;
  padding-top: 7px;
}

.propbox .row2 {
  height: 30px;
  font-size: 13px;
  color: $darkest-grey;
  clear: both;
}

.propbox .title-author {
  float: left;
  width: 632px;
  margin-top: 12px;
}

.propbox.featured .title-author {
  float: left;
  width: 602px;
  margin-top: 12px;
}

.propbox.completed .title-author {
  width: 752px;
}

.propbox.featured.completed .title-author {
  width: 722px;
}

.propbox h4 {
  float: left;
  display: inline;
  font-weight: 700;
  color: $darkest-grey;
}

.propbox h4 span {
  color: black;
}

.thumbbox, .commbox, .voteboxsmall {
  float: left;
  width: 30px;
  height: 22px;
  font-weight: 700;
  color: black;
  padding: 4px 0 0 31px;
  @include border-radius(3px);
}

.thumbbox {
  background: url(../images/icon-proposal-support.png) no-repeat 11px 5px $lightest-grey;
  margin-right: 6px;
}

.voteboxsmall {
  background: url(../images/icon-proposal-vote-small.png) no-repeat 11px 5px $lightest-grey;
  margin-right: 6px;
}

.modbox {
  float: left;
  width: 81px;
  padding-top: 4px;
}

.conbox {
  float: left;
  width: 99px;
  padding-top: 4px;
}

.propbox.featured .ribbonPlaceholder {
  height: 28px;
  width: 30px;
  float: left;
}

.propbox.featured .row2 {
  padding-left: 30px;
}

.propbox-red {
  background-color: $alert-color !important;
}

.propbox-green {
  background-color: $secondary-light !important;
}

/* right column */
.votebox-wrap {
  width: 334px;
  margin-top: -34px;
}

/* increase negative top margin for edit proposal button block */
.votebox-wrap.ep {
  width: 334px;
  margin-top: -87px;
}

.votebox-shade {
  width: 331px;
  background: $light-grey;
  margin: 3px 0 0 3px;
}

.votebox {
  width: 331px;
  background: $lightest-grey;
  border: 1px solid $light-grey;
  position: relative;
  top: -5px;
  left: -5px;
}

.votebox-top {
  border-bottom: 1px dotted $medium-grey;
  padding: 10px 10px 20px 18px;
}

.votebox-top .vote {
  float: left;
  width: 260px;
  padding-top: 17px;
  font-size: 27px;
  color: $darkest-grey;
}

.votebox-top .vote span {
  font-size: 33px;
  color: $secondary-color;
  font-weight: 700;
}

.votebox-top .vote img {
  padding: 0 3px 0 5px;
}

.votebox-top .question {
  float: right;
  width: 23px;
  height: 23px;
}

.votebox-top .blue-button {
  margin-top: 5px;
  font-weight: 400;
}

.votebox-bottom {
  font-size: 16px;
  color: $dark-grey;
  background: $lightest-grey;
  padding: 14px 0 17px 18px;
}

.votebox-bottom span {
  font-size: 20px;
  font-weight: 700;
}
/* ... */

